Adding Note field and Buttons

--- a/css/payroll_form_css.css
+++ b/css/payroll_form_css.css
@@ -131,3 +131,94 @@ select{
     color: #42515f;
     background-color: transparent;
 }
+
+.button-content{
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.button{
+    font-size: 20px;
+    font-family: Roboto;
+    text-align: center;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+    background: transparent;
+    border: none;
+    font-weight: 400;
+    min-width: 140px;
+    padding: 7px 7px;
+    border: 1px solid #707070;
+    cursor: pointer;
+}
+
+.submitButton:hover{
+    margin-left: 15px;
+    color: whitesmoke;
+    border: none;
+    background-color: green;
+    margin-right: 30px;
+    opacity: 0.8;
+    
+}
+
+.cancelButton:hover{
+    background-color: grey;
+    margin-left: 10px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.resetButton:hover{
+    margin-left: 10px;
+    background-color: grey;
+}
+
+.submit-reset{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+@media only screen and (max-width:960px){
+    .cancelButton {
+        margin-left: 0px;
+    }
+    .form{
+        width: 85%;
+        padding: 44px 20px;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .form{
+        margin-top: 10px;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .uploadButton{
+        justify-content: flex-start;
+    }
+    .profile-radio-content{
+        flex-flow: wrap;
+    }
+    .submit-reset{
+        width: 100%;
+        display: flex;
+        flex-grow: 1;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+    .submitButton{
+        margin: 0;
+        
+    }
+    .button-content{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+}
