--- a/css/payroll_form_css.css
+++ b/css/payroll_form_css.css
@@ -104,6 +104,13 @@ label{
     resize: vertical;
 }
 
+.error-text-output{
+    color: red;
+    font-size: 14px;
+    font: bold;
+    opacity: 0.6;
+}
+
 .profile-radio-content{
     display: flex;
     flex-direction: row;
@@ -160,20 +167,20 @@ select{
     color: whitesmoke;
     border: none;
     background-color: green;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     opacity: 0.8;
     
 }
 
 .cancelButton:hover{
     background-color: grey;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     text-decoration: none;
     text-align: center;
 }
 
 .resetButton:hover{
-    margin-left: 10px;
+    /* margin-left: 10px; */
     background-color: grey;
 }
 
