Adding EventListener On loading document

--- a/css/payroll_form_css.css
+++ b/css/payroll_form_css.css
@@ -108,7 +108,7 @@ label{
     margin-left: 12px;
     color: red;
     font-size: 14px;
-    font: bold;
+    font: italic;
     opacity: 0.6;
 }
 
